@@ -243,7 +243,7 @@ ChatWindow::requestChatFocus()
 }
 
 bool
-ChatWindow::isFocused()
+ChatWindow::isInputFocused()
 {
     return mChatInput->isFocused();
 }
